--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>A passionate web developer. My journey in the world of web development has equipped me with skills in HTML, CSS, JavaScript, and more.</p>
             <p>I specialize in translating ideas into responsive and visually appealing websites.</p>
 
-            <button id="button"><a href="flies/Resume.pdf" target="_blank">My Resume <i class="fa-solid fa-download"></i></a></button>
+            <button id="button"><a href="files/Resume.pdf" target="_blank">My Resume <i class="fa-solid fa-download"></i></a></button>
             </div>
 
             <div id="photo">
