--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Links</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="media/media.css">
     <link rel="icon" href="images/images.jpg">
